# todoapp2

backend/: .gitignore  Cargo.toml  todos.db  todos.db-shm  todos.db-wal  todos.json
backend/migrations/: 20231215145234_todos.sql  20240308170430_users.sql  20240308170439_sessions.sql
backend/src/: main.rs
backend/src/endpoints/: auth.rs  mod.rs  todos.rs
backend/src/middlewares/: auth.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/components/: EditTodoView.vue  HeaderComponent.vue  LoginForm.vue  NewTodoView.vue  SignUpForm.vue  TodoForm.vue  TodosTable.vue
frontend/src/components/ui/form/: FormDescription.vue  FormItem.vue  FormLabel.vue
frontend/src/components/ui/label/: Label.vue
frontend/src/models/: todo.ts
frontend/src/router/: index.ts
frontend/src/views/: AuthView.vue  HomeView.vue  SignUpView.vue  TodoView.vue
